--- a/views/vendorRegistration.ejs
+++ b/views/vendorRegistration.ejs
@@ -81,6 +81,10 @@
                 <input type="text" id="vendorId" name="vendorId" required>
             </div>
             <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
             </div>
